<resources>
    <string name="app_name">ClickFestival</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="top_fragment_label">TOP</string>
    <string name="game_fragment_label">GAME</string>
    <string name="start">Start</string>
    <string name="click">Click!!</string>

    <string name="hello_top_fragment">CLICK FESTIVAL</string>
    <string name="hello_game_fragment">Hello game fragment. Arg: %1$s</string>
    <string name="play_again">Play Again</string>
    <string name="back_home">Back Home</string>
    <string name="score">Score: %1$d</string>
    <string name="back_home_content_description">back home</string>
    <string name="play_again_content_description">play again</string>
    <string name="click_here_content_description">click here</string>
</resources>